# llm-council-plus

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  render.yaml
backend/: advisor_prompts.py  advisors.py  council.py  main.py  model_preflight.py  personas.py  prompts.py  search.py  settings.py  storage.py  test_tinyfish.py
backend/tests/: test_advisors_backend.py  test_model_preflight.py  test_personas.py  test_settings_backup.py
docs/: QUICKSTART.md
docs/archive/: GEMINI-2025-11-27.md
docs/mcp/: CHOOSING-TRANSPORT.md  EXAMPLES.md  README.md  SETUP-LOCAL.md  SETUP-REMOTE.md  TOOLS.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  ModeToggle.css  api.js  index.css
frontend/src/components/: AdvisorGrid.css  AdvisorGrid.jsx  AdvisorSetup.css  AdvisorSetup.jsx  ChatInterface.css  ChatInterface.jsx  DebateView.css  DebateView.jsx  LandingPage.css  LandingPage.jsx  SearchableModelSelect.jsx  Settings.css  Settings.jsx  Sidebar.css  Sidebar.jsx  Stage2.css  Stage2.jsx  ThinkBlockRenderer.jsx
frontend/src/hooks/: useAdvisorStream.js  useCouncilStream.js
frontend/src/utils/: modelHelpers.js
llm_council_mcp/: __main__.py  client.py  server.py  stream_buffer.py
llm_council_mcp/tests/: test_client.py  test_integration.py  test_stream_buffer_advisor.py  test_tools_advisors.py  test_tools_council.py  test_tools_deliberation.py  test_tools_health_conv.py
llm_council_mcp/tools/: advisors.py  council.py  deliberation.py
skills/llm-council-api/: SKILL.md
(+4 files in other folders)
