[project]
name = "llm-council-plus"
version = "0.2.3"
description = "LLM Council Plus - Your Advanced AI Council"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "ddgs>=8.0.0",
    "yake>=0.4.8",
    "mcp[cli]>=1.0.0",
]

[project.scripts]
llm-council-mcp = "llm_council_mcp.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
